@@ -1,5 +1,5 @@
 openbsd Raadt
-Results <b>1</b> - <b>10</b> of
+About [\d,]+ results
 openbsd -mail Raadt
 Theo de <b>Raadt</b>
 openbsd -pr 666
